# Rffi

./: .Rbuildignore  .gitignore  Bugs  Changelog  Copyright  DESCRIPTION  NAMESPACE  README  README.win  Todo.xml  cleanup  config.status  configure  configure.in  configure.win  struct.R  test.R  varargs.R
R/: aClasses.R  array.R  config.R.in  onLoad.R  prepCIF.R  runTime.R  setSlots.R  sizeof.R  struct.R  types.R  xalloc.R
Web/: GNUmakefile  config.status  index.html  index.html.in
Web/autom4te.cache/: traces.0
inst/Paper/: GNUmakefile  Rffi.Rdb  Rffi.html  foo.c  funPtrLLVM.R  funPtrTU.R  funPtrTest.R  genFunPtr.R  keyPoints
inst/doc/: GNUmakefile  Rffi.Rdb  WhyFFI.html
libffi-3.0.9/: Makefile  Makefile.am  config.status  libffi.la  libtool
libffi-3.0.9/.libs/: libffi.5.dylib  libffi.lai
libffi-3.0.9/include/: Makefile
libffi-3.0.9/man/: Makefile
libffi-3.0.9/src/.deps/: closures.Plo  debug.Plo  java_raw_api.Plo  prep_cif.Plo  raw_api.Plo  types.Plo
libffi-3.0.9/src/x86/: darwin.lo  darwin64.lo
libffi-3.0.9/testsuite/: Makefile
man/: CIF-class.Rd  TypedPointer.Rd  addFinalizer.Rd  addrOf.Rd  alloc.Rd  callCIF.Rd  free.Rd  getFFITypeSize.Rd  getNativeValue.Rd  getStructField.Rd  libffiVersion.Rd  makeClosure.Rd  pointer.Rd  prepCIF.Rd  setSlots.Rd  structInfo.Rd  structType.Rd  voidType.Rd
src/: #test.c#  Makevars  Makevars.in  Makevars.win  addrOf.c  converters.c  converters.h  ffi.c  struct.c  test.c
tests/: addrOf.R  array.R  pid.R  pointer.R  rlimit.R  sexp.R  stringArray.R  strtol.R  struct.R  varArgs.R
(+2 files in other folders)
